--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
             as="style"
             onload="this.onload=null;this.rel='stylesheet'"
         />
+        <link
+            rel="preload"
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+            as="style"
+            onload="this.onload=null;this.rel='stylesheet'"
+        />
     </head>
     <body>
         <noscript>
